<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ena"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/textView_modifyData"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="number"
            android:minHeight="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:enabled="false"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextHospitalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextHint_hospitalName"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/direcci_n"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextHint_description"
            android:inputType="textMultiLine"
            android:minHeight="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextHint_latitude"
            android:inputType="numberDecimal"
            android:minHeight="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextHint_longitude"
            android:inputType="numberDecimal"
            android:minHeight="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:text="@string/buttonText_modify" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:text="@string/buttonText_cancel"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>