<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateFragment"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/textView_addData"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextHospitalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextHint_hospitalName"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Dirección"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextHint_description"
            android:inputType="textMultiLine"
            android:minHeight="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextHint_latitude"
            android:inputType="numberDecimal"
            android:minHeight="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextHint_longitude"
            android:inputType="numberDecimal"
            android:minHeight="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/teal_200"
            android:text="@string/buttonText_add" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkGray"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/buttonText_cancel" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>